--- a/layouts/application.erb
+++ b/layouts/application.erb
@@ -11,7 +11,7 @@
 </head>
 <body>
   <nav class="nav">
-    <h1 class="nav__title">BS</h1>
+    <h1 class="nav__title">BeautifulSearch</h1>
     <div class="nav__links">
       <a href="#">Dashboard</a>
     </div>
