--- a/src/App.css
+++ b/src/App.css
@@ -253,6 +253,7 @@ button:disabled {
   /* background-color: #fff0; */
   /* background: white; */
   background: var(--overlay-color);
+  overflow: auto;
 }
 
 .modal__content {
@@ -265,6 +266,15 @@ button:disabled {
   padding: var(--spacing-4);
 }
 
+
+.synonym-modal__button {
+  margin-top: var(--spacing-6);
+  text-align: end;
+}
+
+.continue__button {
+  margin-left: var(--spacing-4);
+}
 
 .form__row {
   display: flex;
@@ -709,4 +719,36 @@ button:disabled {
 
 progress[value]::-webkit-progress-value {
   border-radius: 10px;
+}
+
+/*JSON Editor Css*/
+.jsoneditor-react-container {
+  width: 100%;
+  height: 100%;
+}
+
+.jsoneditor {
+  border: 1px solid var(--black);
+}
+
+div.jsoneditor-outer {
+  background-color: var(--black);
+  color: var(--white);
+}
+
+textarea.jsoneditor-text {
+  min-height: 300px;
+}
+
+.app .contents {
+  display: inline;
+}
+
+.app .contents .mode {
+  padding: 10px 0;
+}
+
+.app .contents .code {
+  background: #f5f5f5;
+  overflow: auto;
 }
