--- a/src/App.css
+++ b/src/App.css
@@ -287,6 +287,99 @@ button:disabled {
   padding-bottom: var(--spacing-4);
 }
 
+.documents-modal__content {
+  background-color: var(--white);
+  padding: var(--spacing-8);
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  right: 40px;
+  max-width: 750px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.upload-header__container {
+  padding: 8px 24px 8px 0;
+}
+
+.upload-header__text {
+  line-height: 1.5;
+  margin: 0;
+  color: var(--grey-darker);
+  font-size: 18px;
+}
+
+.upload-option__container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: var(--spacing-6);
+  margin-bottom: var(--spacing-6);
+}
+
+.upload__option {
+  width: 43%;
+  cursor: pointer;
+  padding: var(--spacing-4);
+  text-align: center;
+  border: 1px solid var(--grey);
+  border-radius: 10px;
+  box-shadow: var(--shadow-default);
+}
+
+.upload__option:hover {
+  box-shadow: var(--shadow-md);
+  -webkit-transform: translateY(-2px);
+  transform: translateY(-2px);
+}
+
+.upload-title__text {
+  font-size: var(--xl);
+  line-height: 1.5;
+  font-weight: 500;
+  color: var(--grey-darkest);
+}
+
+.upload__text {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  padding: var(--spacing-4);
+  background: var(--white);
+  border-width: 1px 1px 1px 4px;
+  border-style: solid;
+  border-radius: 2px;
+  border-color: var(--grey-dark);
+  font-size: var(--sm);
+  line-height: 1.5;
+  color: var(--grey-dark);
+}
+
+.upload__action {
+  text-align: end;
+  margin-top: var(--spacing-6);
+}
+
+.uploader__input {
+  height: 0;
+  visibility: hidden;
+  width: 0;
+}
+
+.uploader__label {
+  border: var(--border-4) dashed var(--grey);;
+  border-radius: var(--border-radius-lg);
+  color: var(--grey);
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  font-weight: var(--semibold);
+  padding: var(--spacing-4);
+  min-width: 200px;
+  text-align: center;
+}
+
+
 /* Synonyms views css */
 
 .synonyms {
@@ -751,4 +844,11 @@ textarea.jsoneditor-text {
 .app .contents .code {
   background: #f5f5f5;
   overflow: auto;
+}
+
+.uploader__label .svg-inline--fa {
+  margin-left: auto;
+  font-size: var(--xl5);
+  margin-bottom: var(--spacing-10);
+  margin-right: auto;
 }
