add global variables for step1 and step2 and add package for json view

--- a/src/assets/css/constants.css
+++ b/src/assets/css/constants.css
@@ -193,7 +193,7 @@ http: //necolas.github.io/normalize.css/
   --green-darkest: #0f2f21;
   --green-darker: #1a4731;
   --green-dark: #1f9d55;
-  --green: #38c172;
+  --green: #6dc55a;
   --green-light: #51d88a;
   --green-lighter: #a2f5bf;
   --green-lightest: #e3fcec;
